# RWA-Tokenization-System-Python

./: Makefile  README.md  docker-compose.yaml  pyproject.toml  rwa-tokenization.py  rwa-tokenization.sql
db/init/: 001-schema.sql  002-readonly-user.sql
mpc/: Dockerfile  node.py
outbox/: Dockerfile  outbox-publisher.py
rwa-service/: Dockerfile  rwa-service.py
signing-gateway/: Dockerfile  gateway.py
tests/: test_core.py
